--- a/dashboard/src/app/stacks/list-stacks/list-stacks.styl
+++ b/dashboard/src/app/stacks/list-stacks/list-stacks.styl
@@ -1,5 +1,26 @@
 .stacks-list-content
+  position relative
   margin 0
+
+  .che-list-header-column,
+  .che-list-item-row .che-list-item-secondary
+    padding-left 2px
+    line-height 39px
+
+  .apply-filter-to-selected-column
+    position absolute
+    right 180px
+    top 15px
+
+    md-checkbox
+     margin: 8px
+     padding 0
+
+  .apply-column-changes
+    .applied-column
+      background-color #F2F7FD
+    .header-sort-direction
+      display none
 
   .devfile-selector-icon-column
     width 100px
